--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
   pool: 5
   username: rails5_api_user
   password: Rails@RootPassword999@
@@ -26,6 +26,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: rails5_api_test_user
   database: rails5_api_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
